my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ENOBJ/ENOBJ.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENOBJ.dml:6:7: In test
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENOBJ.dml:27:8: error ENOBJ: object expected: 5
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENOBJ.dml:17:7: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENOBJ.dml:19:20: error ENOBJ: object expected: 4
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENOBJ.dml:21:21: error ENOBJ: object expected: b.r[i]
